--- a/springcloud-openfeign-example/pom.xml
+++ b/springcloud-openfeign-example/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>feign-okhttp</artifactId>
         </dependency>-->
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
