--- a/springcloud-openfeign-example/src/main/resources/application.yml
+++ b/springcloud-openfeign-example/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     name: springcloud-openfeign-example
 
 server:
-  port: 8010
+  port: 8000
 
 logging:
   level:
@@ -58,6 +58,16 @@ hystrix:
         isolation:
           thread:
             timeoutinMilliseconds: 10000
+
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8000/eureka/
+  #eureka.instance.prefer-ip-address  表示将自己的IP注册到Eureka Server上，
+  #如果不配置,会将当前服务提供者所在的主机名注册到Eureka Server上。
+  instance:
+    prefer-ip-address: true
 
 
 
