--- a/springcloud-eureka-example/src/main/resources/application.yml
+++ b/springcloud-eureka-example/src/main/resources/application.yml
@@ -2,24 +2,6 @@
 spring:
   application:
     name: springcloud-eureka-example
-
-
-
-
-
-
-server:
-  port: 8001
-
-eureka:
-  instance:
-    hostname: localhost
-  server:
-    enable-self-preservation: false
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-
+  profiles:
+    active: local
 
