--- a/springcloud-eureka-example/src/main/resources/application-local.yml
+++ b/springcloud-eureka-example/src/main/resources/application-local.yml
@@ -7,9 +7,13 @@ eureka:
   server:
     enable-self-preservation: false
   client:
+    # 代表是否向Eureka注册中心注册自己，Server本身不需要注册
     register-with-eureka: false
+    # false表示自己为注册中心，不需要检索服务
     fetch-registry: false
     service-url:
+      # 不用默认的配置
+      # 单机 defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
 
