--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,10 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
         <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
-        <maven.test.skip>true</maven.test.skip>
         <lombok.version>1.12.6</lombok.version>
+        <datasource.druid.version>1.1.17</datasource.druid.version>
+        <mybatis-plus.version>3.3.1</mybatis-plus.version>
+        <maven.test.skip>true</maven.test.skip>
 
     </properties>
 
@@ -72,15 +74,10 @@
     </dependencyManagement>
 
     <modules>
-        <module>
-            springcloud-openfeign-client
-        </module>
-        <module>
-            springcloud-openfeign-provider
-        </module>
-        <module>
-            springcloud-eureka-example
-        </module>
+        <module>springcloud-openfeign-client</module>
+        <module>springcloud-openfeign-provider</module>
+        <module>springcloud-eureka-example</module>
+        <module>springcloud-transaction</module>
     </modules>
 
     <build>
