--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,12 @@ stages:
 
 # 例如fix(Foo):sth[skip ci]将跳过代码检查
 commit_msg:
+  # stage是一个字符串，且是stages数组的一个子项，表示的是当前的Pipeline节点
   stage: lint
+  # 它是当前Pipeline节点运行的shell脚本（以项目根目录为上下文执行）
+  # 如果脚本执行成功，Pipeline就会进入下一个Job节点，如果执行失败那么Pipeline就会终止
   script:
     - /bin/bash commit-msg.sh
-  only:
+  rules:
     # 当用户使用push或者Merge Request时候触发 CI Pipeline
     - pushes
