--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
         <module>springcloud-eureka-example</module>
         <module>springcloud-transaction</module>
         <module>springcloud-sharding-jdbc</module>
+        <module>springcloud-example</module>
     </modules>
 
     <build>
