--- a/springcloud-rocketmq/pom.xml
+++ b/springcloud-rocketmq/pom.xml
@@ -166,6 +166,12 @@
             <version>4.9.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty</artifactId>
+            <version>3.10.6.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
