feat:introduce agent

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
         <module>springcloud-sharding-jdbc</module>
         <module>springcloud-example</module>
         <module>springcloud-rocketmq</module>
+        <module>springcloud-core-java-modules</module>
     </modules>
 
     <build>
