--- a/springcloud-demo-docker/pom.xml
+++ b/springcloud-demo-docker/pom.xml
@@ -37,6 +37,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
