--- a/springcloud-rocketmq/pom.xml
+++ b/springcloud-rocketmq/pom.xml
@@ -172,6 +172,12 @@
             <version>4.1.55.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.10</version>
+        </dependency>
+
     </dependencies>
 
     <build>
