--- a/springcloud-alibaba-dubbo/springboot-dubbo-consumer/src/main/resources/application.yml
+++ b/springcloud-alibaba-dubbo/springboot-dubbo-consumer/src/main/resources/application.yml
@@ -6,6 +6,6 @@ dubbo:
   application:
     name: springboot-dubbo-consumer
   registry:
-    address: zookeeper://101.35.19.88:2180,101.35.19.88:2181,101.35.19.88:2182
+    address: zookeeper://ip:2180,ip:2181,ip:2182
 
 
