--- a/springcloud-openfeign-provider/pom.xml
+++ b/springcloud-openfeign-provider/pom.xml
@@ -32,6 +32,7 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!--Spring Boot提供的Actuator（监视器、监控中心 ）,支持POST方式-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
