--- a/springcloud-openfeign-client/src/main/resources/application.yml
+++ b/springcloud-openfeign-client/src/main/resources/application.yml
@@ -66,13 +66,14 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8000/eureka/
+    # 开启eureka client
     enabled: true
 
   #eureka.instance.prefer-ip-address  表示将自己的IP注册到Eureka Server上，
   #如果不配置,会将当前服务提供者所在的主机名注册到Eureka Server上。
   instance:
     prefer-ip-address: true
-    # 修改Eureka 状态描述信息
+    # 修改Eureka (Status) 状态描述信息
     instance-id: springcloud-client
 
 
